--- a/home_work_12/src/main/resources/static/index.html
+++ b/home_work_12/src/main/resources/static/index.html
@@ -1,9 +1,37 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml" content="text/html;">
+﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Админка</title>
     <meta charset="UTF-8">
 </head>
 <body>
-<a href="crud">Проверить ДЗ-12!</a>
+<form method="post">
+<div>
+    <h3>Добавление пользователя.</h3>
+    Введите имя:<br/>
+    <input type="text" name="name" accept-charset="UTF-8"><br/>
+    Введите возраст:<br/>
+    <input type="text" name="age" accept-charset="UTF-8"><br/>
+    Введите адрес:<br/>
+    <input type="text" name="address" accept-charset="UTF-8"><br/>
+    Введите номера телефонов через запятую (без пробелов):<br/>
+    <input type="text" name="phones" accept-charset="UTF-8"><br/>
+    <button type="submit">Добавить!</button>
+</div>
+</form>
+<form method="get">
+    <div>
+        <h3>Поиск имени пользователя по id.</h3>
+        Введите id пользователя:<br/>
+        <input type="text" name="id" accept-charset="UTF-8"><br/>
+        <button type="submit" onclick="location.href='/index'">Найти!</button>
+        <p><#if exampleObject??>Результат - ${exampleObject.user_name}<#else></#if></p>
+    </div>
+</form>
+<form method="get">
+    <div>
+        <h3>Получение количества пользователей в БД.</h3>
+        <button type="submit">Получить!</button>
+    </div>
+</form>
 </body>
 </html>
