--- a/home_work_12/src/main/resources/static/index.html
+++ b/home_work_12/src/main/resources/static/index.html
@@ -5,12 +5,12 @@
     <title>Вход</title>
 </head>
 <body>
-<form action="crud" method="get">
+<form action="crud" method="post">
     <div>
         Введите логин:<br/>
         <input type="text" name="login" accept-charset="UTF-8"><br/>
         Введите пароль:<br/>
-        <input type="text" name="pass" accept-charset="UTF-8"><br/>
+        <input type="password" name="pass" accept-charset="UTF-8"><br/>
         <input type='hidden' name='action' value="login"/>
         <button type="submit">Войти!</button>
     </div>
