--- a/home_work_12/src/main/resources/static/crud.html
+++ b/home_work_12/src/main/resources/static/crud.html
@@ -9,6 +9,8 @@
     <h3>Добавление пользователя.</h3>
     Введите имя:<br/>
     <input type="text" name="name" accept-charset="UTF-8"><br/>
+    Введите пароль:<br/>
+    <input type="text" name="pass" accept-charset="UTF-8"><br/>
     Введите возраст:<br/>
     <input type="text" name="age" accept-charset="UTF-8"><br/>
     Введите адрес:<br/>
@@ -18,6 +20,11 @@
     <input type='hidden' name='action' value="insertUser"/>
     <button type="submit">Добавить!</button>
 </div>
+    <#if created??>
+    <div>
+        <p>${created}</p>
+    </div>
+</#if>
 </form>
 <form method="get">
     <div>
@@ -29,7 +36,7 @@
     </div>
     <#if foundUser??>
     <div>
-        <p>Имя пользователя с таким id - ${foundUser.user_name}</p>
+        <p>Имя пользователя с таким id - ${foundUser}</p>
     </div>
     </#if>
 </form>
@@ -39,6 +46,11 @@
         <input type='hidden' name='action' value="getCount"/>
         <button type="submit">Получить!</button>
     </div>
+    <#if count??>
+    <div>
+        <p>Количество пользователей в БД - ${count}</p>
+    </div>
+</#if>
 </form>
 </body>
 </html>
