--- a/home_work_12/src/main/resources/static/index.html
+++ b/home_work_12/src/main/resources/static/index.html
@@ -5,13 +5,13 @@
     <title>Вход</title>
 </head>
 <body>
-<form action="crud" method="post">
+<form action="login" method="post">
     <div>
         Введите логин:<br/>
         <input type="text" name="login" accept-charset="UTF-8"><br/>
         Введите пароль:<br/>
         <input type="password" name="pass" accept-charset="UTF-8"><br/>
-        <input type='hidden' name='action' value="login"/>
+<!--        <input type='hidden' name='action' value="login"/>-->
         <button type="submit">Войти!</button>
     </div>
 </form>
