--- a/home_work_12_Веб сервер/src/main/resources/static/crud.html
+++ b/home_work_12_Веб сервер/src/main/resources/static/crud.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<form method="post">
+<form method="post" action="crud">
 <div>
     <h3>Добавление пользователя.</h3>
     Введите имя:<br/>
