--- a/home_work_12_Веб сервер/src/main/resources/static/crud.html
+++ b/home_work_12_Веб сервер/src/main/resources/static/crud.html
@@ -26,7 +26,7 @@
     </div>
 </#if>
 </form>
-<form method="get">
+<form method="get" action="crud">
     <div>
         <h3>Поиск имени пользователя по id.</h3>
         Введите id пользователя:<br/>
@@ -40,7 +40,7 @@
     </div>
     </#if>
 </form>
-<form method="get">
+<form method="get" action="crud">
     <div>
         <h3>Получение количества пользователей в БД.</h3>
         <input type='hidden' name='action' value="getCount"/>
