небольшие правки в ДЗ 12.1

--- a/home_work_12_1_web_server/src/main/resources/static/index.html
+++ b/home_work_12_1_web_server/src/main/resources/static/index.html
@@ -5,6 +5,9 @@
     <title>Вход</title>
 </head>
 <body>
+<!--здесь в атрибут action прописывает по сути path до нужного сервлета, в данном случае нам нужен LoginServlet,
+который слушает путь /login, поэтому здесь пишем login, чтобы post запрос улетел на /login-->
+<!--если нужен путь подальше, то надо было бы например написать login/me-->
 <form action="login" method="post">
     <div>
         Введите логин:<br/>
